network-policies/nginx1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod1
  namespace: network-policy-demo
  labels:
    app: nginx-1
spec:
  containers:
    - name: nginx
      image: nginx
