network-policies/nginx2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod2
  namespace: network-policy-demo
  labels:
    app: nginx-2
spec:
  containers:
    - name: nginx
      image: nginx
