network-policies/deny-all-egress-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: network-policy-demo
spec:
  podSelector: {}
  policyTypes:
  - Egress
