network-policies/retrict-access-to-pod3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np1
  namespace: network-policy-demo
spec:
  podSelector:
    matchLabels:
      app: allowed-pod
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: nginx-1
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: nginx-2
